mq-common-eureka/docker-pv-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docker-pv
  labels:
    name: docker-pv
