mq-common-eureka/mq-common-eureka.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: mq-common-eureka-service1
#spec:
#  type: NodePort
##  containers:
##    - name: mq-common-eureka
##      image: mq-common-eureka:v1
##      imagePullPolicy: Always
##      command: [ "echo", "SUCCESS" ]
##  imagePullSecrets:
##    - name: myregistrykey
#  ports:
#    - name: http
#      port: 8761
#      targetPort: 8761
#      nodePort: 31761
#  selector:
#    name: mq-common-eureka
##      image: index.docker.io/xinyuliu0/my:mq-common-eureka
#apiVersion: v1
#kind: Service
#metadata:
#  name: mq-common-eureka
#spec:
#  type: LoadBalancer
##  containers:
##    - name: mq-common-eureka
##      image: mq-common-eureka:v1
##      imagePullPolicy: Always
##      command: [ "echo", "SUCCESS" ]
##  imagePullSecrets:
##    - name: myregistrykey
#  ports:
#    - name: http
#      port: 8761
#      targetPort: 8761
##      nodePort: 31761
#  externalIPs:
#    - 192.168.99.102
#  selector:
#    name: mq-common-eureka
#    app: mq-common-eureka
###      image: index.docker.io/xinyuliu0/my:mq-common-eureka
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mq-common-eureka
  namespace: docker-pv
spec:
  replicas: 2
  template:
    metadata:
      namespace: docker-pv
      labels:
        run: mq-common-eureka
    spec:
      volumes:
        - name: task-pv-storage
          persistentVolumeClaim:
            claimName: task-pv-claim1
      imagePullSecrets:
          - name: digital.dance.com
      containers:
        - name: mq-common-eureka
          image: www.digital.dance.com:5001/repository/digital.dance.docker/mq-common-eureka:v1
          ports:
            - name: http
              containerPort: 8761
#              hostIP: 0.0.0.0
#              hostPort: 8761
#              protocol: TCP
#            - name: https
#              containerPort: 443
#              hostIP: 0.0.0.0
#              hostPort: 443
#              protocol: TCP
          volumeMounts:
            - mountPath: "/app"
              name: task-pv-storage
#    externalIPs:
#      - 192.168.99.102
---
apiVersion: v1
kind: Service
metadata:
  name: mq-common-eureka
  namespace: docker-pv
  labels:
    run: mq-common-eureka
spec:
  type: NodePort
  ports:
    - name: http
      port: 8761
      targetPort: 8761
      nodePort: 38761
#    - name: https
#      port: 443
#      targetPort: 443
#      nodePort: 30023
  selector:
    run: mq-common-eureka
